--- a/UmbracoDiff/packages.config
+++ b/UmbracoDiff/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
+  <package id="Caliburn.Metro" version="0.4.0" targetFramework="net45" />
   <package id="Caliburn.Micro" version="2.0.0" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.0" targetFramework="net45" />
   <package id="Fody" version="1.24.0" targetFramework="net45" developmentDependency="true" />
   <package id="MahApps.Metro" version="0.13.1.0" targetFramework="net45" />
+  <package id="MahApps.Metro.Resources" version="0.1.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="1.48.2.0" targetFramework="net45" developmentDependency="true" />
 </packages>
