--- a/UmbracoDiff/UmbracoDiff.csproj
+++ b/UmbracoDiff/UmbracoDiff.csproj
@@ -105,6 +105,7 @@
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="AutofacConfiguration.cs" />
+    <Compile Include="Events\SettingsNotConfiguredEvent.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Models\UmbracoConnection.cs" />
     <Compile Include="PropertyViewer.xaml.cs">
