--- a/UmbracoDiff/UmbracoDiff.csproj
+++ b/UmbracoDiff/UmbracoDiff.csproj
@@ -119,20 +119,19 @@
     <Compile Include="PropertyViewer.xaml.cs">
       <DependentUpon>PropertyViewer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\Base\IDataCompareService.cs" />
     <Compile Include="Services\Base\ISettingsService.cs" />
     <Compile Include="Services\SettingsService.cs" />
     <Compile Include="ViewModels\AppViewModel.cs" />
     <Compile Include="ViewModels\Base\IScreenTab.cs" />
-    <Compile Include="ViewModels\Dialogs\Base\BaseDialog.cs" />
-    <Compile Include="ViewModels\Dialogs\DbConnectionDialogViewModel.cs" />
     <Compile Include="ViewModels\Screens\CompareScreenViewModel.cs" />
     <Compile Include="ViewModels\Screens\SettingsScreenViewModel.cs" />
     <Compile Include="ViewModels\Settings\UmbracoConnectionViewModel.cs" />
     <Compile Include="Views\AppView.xaml.cs">
       <DependentUpon>AppView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Dialogs\DbConnectionDialogView.xaml.cs">
-      <DependentUpon>DbConnectionDialogView.xaml</DependentUpon>
+    <Compile Include="Views\UmbracoConnectionView.xaml.cs">
+      <DependentUpon>UmbracoConnectionView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Screens\SettingsScreenView.xaml.cs">
       <DependentUpon>SettingsScreenView.xaml</DependentUpon>
@@ -140,14 +139,11 @@
     <Compile Include="Views\Settings\UmbracoConnectionView.xaml.cs">
       <DependentUpon>UmbracoConnectionView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\UmbracoConnection.xaml.cs">
-      <DependentUpon>UmbracoConnection.xaml</DependentUpon>
-    </Compile>
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\Dialogs\DbConnectionDialogView.xaml">
+    <Page Include="Views\UmbracoConnectionView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -182,10 +178,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Settings\UmbracoConnectionView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UmbracoConnection.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -225,7 +217,9 @@
   <ItemGroup>
     <Resource Include="Resources\Entypo-license.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
